# TrinityVirtual

./: README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: utils.cpp  utils.h
app/src/main/cpp/module/: hook_manager.cpp  module_loader.cpp
app/src/main/cpp/root/: ld_preload_lib.cpp  namespace_manager.cpp  namespace_manager.h  root_engine.cpp  su_interceptor.cpp  su_interceptor.h
app/src/main/cpp/spoof/: device_spoof.cpp  gps_spoof.cpp  prop_hook.cpp
app/src/main/java/com/trinityvirtual/: TrinityApp.kt  TrinityApplication.kt
app/src/main/java/com/trinityvirtual/adapter/: ModuleAdapter.kt  VirtualAppAdapter.kt
app/src/main/java/com/trinityvirtual/crash/: CrashReporter.kt
app/src/main/java/com/trinityvirtual/engine/: RootEngine.kt  TrinityDatabase.kt  VirtualCore.kt  VirtualCoreService.kt
app/src/main/java/com/trinityvirtual/model/: SpoofProfile.kt  TrinityModule.kt  VirtualApp.kt
app/src/main/java/com/trinityvirtual/module/: ModuleManager.kt
app/src/main/java/com/trinityvirtual/provider/: VirtualFileProvider.kt
app/src/main/java/com/trinityvirtual/spoof/: DeviceSpoofManager.kt  PropHookManager.kt
app/src/main/java/com/trinityvirtual/ui/: LauncherActivity.kt  MainActivity.kt  ModuleManagerActivity.kt  SettingsActivity.kt  SplashActivity.kt  SpoofSettingsActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_nav_home.xml  ic_nav_settings.xml  ic_trinity_notif.xml
app/src/main/res/layout/: activity_launcher.xml  activity_main.xml  activity_module_manager.xml  activity_settings.xml  activity_splash.xml  activity_spoof_settings.xml  item_module.xml  item_virtual_app.xml
app/src/main/res/menu/: bottom_nav_menu.xml  main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
